syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.board.lib";
option java_outer_classname = "boardSaveProtobuf";

import "google/protobuf/timestamp.proto";

service BoardSave {
  rpc boardSave (BoardSaveRequest) returns (BoardSaveResponse) {

  }
}

message BoardSaveRequest {
  string title = 1;
  string content = 2;
  google.protobuf.Timestamp uploadDatetime = 3;
}

message BoardSaveResponse {
 BoardSaveRequest response = 1;
}